# Shaft-production-planner

./: .gitignore  CMakeLists.txt  README-ru.md  README.md
compas/: blank.cdw  blank.m3d  part.cdw  part.m3d
src/: Window.cpp  app.cpp  app.hpp  cycleTemplate.cpp  cycleTemplate.hpp  cycles.hpp  macroses.hpp  main.cpp  runCycles.cpp  testing.hpp  window.hpp  workCycle.cpp  workCycle.hpp
src/GUI/: GUI.hpp  button.cpp  dynamicText.cpp  imageButton.cpp  infoBox.cpp  switchBox.cpp  text.cpp  textButton.cpp  typeBox.cpp  warningBox.cpp
src/app/: app.cpp  app.hpp  cycleTemplate.cpp  cycleTemplate.hpp  language.cpp  languages.hpp  main.cpp  window.cpp  window.hpp
src/computing/: cell.cpp  cell.hpp  cellDrawer.cpp  cellDrawer.hpp  cellTypes.hpp  cursorMachine.cpp  cursorMachine.hpp  factory.cpp  factory.hpp  grid.cpp  grid.hpp  indexedCell.cpp  indexedCell.hpp  machinery.cpp  machinery.hpp  material.cpp  material.hpp  mechanicalStage.cpp  mechanicalStage.hpp  part.cpp  part.hpp  process.cpp  process.hpp  stage.cpp  stage.hpp  thermalStage.cpp  thermalStage.hpp
src/computing/factory/: cell.cpp  cell.hpp  cellDrawer.cpp  cellDrawer.hpp  factory.cpp  factory.hpp  factoryCycle.cpp  factoryCycle.hpp  factorySubWindow.cpp  factorySubWindow.hpp  field.cpp  field.hpp  grid.cpp  grid.hpp  indexedCell.cpp  indexedCell.hpp  optimiser.cpp  optimiser.hpp
src/computing/global/: settings.cpp  settings.hpp  submenuCycle.cpp  submenuCycle.hpp
src/computing/process/: processCycle.cpp  processCycle.hpp  (+2 more)
src/cycles/: cycles.hpp  workCycle.cpp  workCycle.hpp
src_example/: main.cpp
(+19 files in other folders)
